<resources>
    <string name="app_name">PokemonAPI</string>

    <!-- Pokemon Info -->
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="forms">Forms</string>
    <string name="height_title">Height</string>
    <string name="weight">Weight</string>

    <!-- Content Description -->
    <string name="pokemon_logo">Logo</string>
    <string name="pokemon_image">Pokemon image</string>

    <!-- Toolbar -->
    <string name="pokemon_info">Pokemon details</string>

    <!-- General -->
    <string name="png_extension">.png</string>
    <string name="error_message">Error on loading information</string>
</resources>