<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.pokemoninfo.view.PokemonInfoActivity">

    <Toolbar
        android:id="@+id/toolbarPokemonInfo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light_yellow_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPokemonInfo"
        app:layout_constraintStart_toStartOf="@+id/toolbarPokemonInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pokemon_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/icBack"
        app:layout_constraintStart_toEndOf="@+id/icBack"
        app:layout_constraintTop_toTopOf="@+id/icBack" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        android:background="@color/light_gray_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarPokemonInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:background="@color/light_gray_color"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgPokemonArtwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pokemon_image"
                android:elevation="3dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="@+id/cardInfoLayout"
                app:layout_constraintStart_toStartOf="@+id/cardInfoLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/purple_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/imgPokemonArtwork"
                app:layout_constraintStart_toStartOf="@+id/imgPokemonArtwork"
                app:layout_constraintTop_toBottomOf="@+id/imgPokemonArtwork"
                tools:text="Lucario" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weightAndHeightLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                app:layout_constraintBottom_toTopOf="@+id/rvPokemonStats"
                app:layout_constraintEnd_toEndOf="@+id/cardInfoLayout"
                app:layout_constraintStart_toStartOf="@+id/rvPokemonStats"
                app:layout_constraintTop_toBottomOf="@+id/tvPokemonName">

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-black"
                    android:text="18.35Kg "
                    android:textColor="@color/yellow_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvWeightTitle"
                    app:layout_constraintStart_toStartOf="@+id/tvWeightTitle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWeightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/match_constraint"
                    android:layout_marginStart="16dp"
                    android:elevation="3dp"
                    android:text="WEIGHT"
                    android:textColor="@color/purple_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-black"
                    android:text="1.13m"
                    android:textColor="@color/yellow_color"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvHeightTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvHeightTitle"
                    app:layout_constraintStart_toStartOf="@+id/tvHeightTitle" />

                <TextView
                    android:id="@+id/tvHeightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/match_constraint"
                    android:layout_marginEnd="16dp"
                    android:elevation="3dp"
                    android:text="HEIGHT"
                    android:textColor="@color/purple_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPokemonStats"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="@+id/cardInfoLayout"
                app:layout_constraintEnd_toEndOf="@+id/cardInfoLayout"
                app:layout_constraintStart_toStartOf="@+id/cardInfoLayout"
                app:spanCount="3"
                tools:listitem="@layout/pokemon_stats_list_item" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbPokemonInfo"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/purple_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/pokemonAbilitiesCard"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/purple_color"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="@+id/cardInfoLayout"
                app:layout_constraintStart_toStartOf="@+id/cardInfoLayout"
                app:layout_constraintTop_toBottomOf="@id/cardInfoLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pokemonAbilitiesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/abilities"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/pokemonAbilitiesGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin">

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pokemonTypesCard"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/purple_color"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="@+id/pokemonAbilitiesCard"
                app:layout_constraintStart_toStartOf="@+id/pokemonAbilitiesCard"
                app:layout_constraintTop_toBottomOf="@+id/pokemonAbilitiesCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pokemonTypesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/types"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/pokemonTypesGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin">

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pokemonFormsCard"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/purple_color"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pokemonTypesCard"
                app:layout_constraintStart_toStartOf="@+id/pokemonTypesCard"
                app:layout_constraintTop_toBottomOf="@+id/pokemonTypesCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pokemonFormsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/forms"
                        android:textColor="@color/white" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/pokemonFormsGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin">
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>